# perimeter-qmc

./: CMakeLists.txt  readme.txt
benchmark/: data_set_1.txt  data_set_2.txt  loop_analysis_100_long.txt  periodic structure.txt
doc/html/: accum__double_8hpp_source.html  accum__simple_8hpp_source.html  addon__header_8hpp_source.html  annotated.html  archive__enum_8hpp_source.html  bash__parameter2__msk_8hpp_source.html  bash__parameter3__msk_8hpp_source.html  bash__parameter__msk_8hpp_source.html  bitset__support_8hpp_source.html  boost__multiarray__support_8hpp_source.html  build_8hpp_source.html  byte__operation_8hpp_source.html  classaccumulator__double-members.html  classaccumulator__double.html  classaccumulator__simple-members.html  classaccumulator__simple.html  classaddon_1_1bash__parameter__class-members.html  classaddon_1_1bash__parameter__class.html  classaddon_1_1detail_1_1any__base-members.html  classaddon_1_1detail_1_1any__base.html  classaddon_1_1detail_1_1any__der-members.html  classaddon_1_1detail_1_1any__der.html  classaddon_1_1detail_1_1chameleon__type-members.html  classaddon_1_1detail_1_1chameleon__type.html  classaddon_1_1fserial__class-members.html  classaddon_1_1fserial__class.html  classaddon_1_1global__seed__struct-members.html  classaddon_1_1global__seed__struct.html  classaddon_1_1immortal__class-members.html  classaddon_1_1immortal__class.html  classaddon_1_1iss__class-members.html  classaddon_1_1iss__class.html  classaddon_1_1oss__class-members.html  classaddon_1_1oss__class.html  classaddon_1_1parameter_1_1parameter__class-members.html  classaddon_1_1parameter_1_1parameter__class.html  classaddon_1_1progress__save__class-members.html  classaddon_1_1progress__save__class.html  classaddon_1_1random__class-members.html  classaddon_1_1random__class.html  (+155 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  (+57 more)
doc/stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
examples/: 30x30_shift.txt  CMakeLists.txt  grid_example.cpp  grid_performance_test.cpp  grid_playground.cpp  loop_analysis.cpp  loop_to_braket_realisation.cpp  measure_periodic_access.cpp  measure_periodic_access_2.cpp  multi_grid_state_test.cpp  rng_example.cpp  serialization.cpp  shift.txt  sim.cpp  sim_playground.cpp  swap_16x16.txt  swap_16x16m.txt  test_loop_realisator.cpp  test_serialize.cpp  test_tile.cpp  viz.cpp
examples/loop_braket_realisation/: CMakeLists.txt  config_collider.cpp
examples/loop_braket_realisation/instances/: 16+16.txt  16+16b.txt  16+16c.txt  2+2+2+2+2+2+2+2.txt  2+2.txt  32+16+16.txt  32+16x2.txt  32+32.txt  4+2+2.txt  4+4+2+2+2+2.txt  4+4+4+4 Id.txt  4+4+4+4 Op.txt  4+4.txt  8+2+2+2+2.txt  8+4+4.txt  XXX+9x2.txt
examples/loop_braket_realisations/: 16+4+4+4+4.txt  16+8+8.txt  16x2+16x2.txt  2+2+2+2.txt  2+2.txt  32+8+8+8+8.txt  4+2+2+4+2+2.txt  4+2+2.txt  4+4+2+2+2+2.txt  4+4+4+4 Id.txt  4+4+4+4 Op.txt  4+4.txt  8+4+2+2.txt  8+8.txt
examples/swap/: CMakeLists.txt  permut_swap.cpp  sim_playground.cpp  swap_4x4.txt  swap_8x8.txt  swap_8x8_out.txt  swap_8x8_single.txt
src/: Doxyfile  conf.hpp  conf.hpp.in  grid_class.hpp  jackknife.hpp  loop_realisator.hpp  shift_region_class.hpp  sim_class.hpp  site_struct.hpp  swap_region_class.hpp  test_jack.cpp
src/addons/: accum_double.hpp  accum_simple.hpp  bash_parameter2_msk.hpp  bash_parameter3_msk.hpp  color.hpp  immortal_msk.hpp  plot.py  progress_save_msk.hpp  random2_msk.hpp  serialize.hpp  timer2_msk.hpp
src/job_creator/: big_sweep.py  plotv2.py  shift.py  sync.py
src/lib/: CMakeLists.txt  demo.cpp
src/version/: build.hpp  config.hpp  config.hpp.in  incr_build.py  version_info.hpp
test/: CMakeLists.txt  periodic_boundary_test.cpp  swap_region_test.cpp
(+21 files in other folders)
